Fix mentions alignment

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -6928,7 +6928,7 @@ button.module-image__border-overlay:focus {
       padding: 0 12px;
       display: flex;
       flex-direction: row;
-      align-items: end;
+      align-items: center;
       justify-content: flex-start;
       background: none;
       border: none;
